Путешествия рев.2 исправлены замечания после 2-ой проверки

--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
     <header class="header">
         <img src="./images/header-logo.svg" class="header__logo" alt='логотип' />
         <div class="header__lang-links">
-            <a href="#" class="header__lang-link header__lang-link_Ru header__lang-link_active">Ru</a>
-            <a href="#" class="header__lang-link header__lang-link_En">En</a>
+            <a href="#" class="header__lang-link header__lang-link_active">Ru</a>
+            <a href="#" class="header__lang-link">En</a>
         </div>
     </header>
     <main>
@@ -143,8 +143,7 @@
         <section class="cover">
         <a target="_blank" href="https://stampsy.com/na-elektrichkakh-do-baikala" class="cover__href">            
                 <h2 class="cover__title">До Байкала «на собаках»</h2>
-                <p class="cover__subtitle">По мотивам учебной темы о Транссибе — путешествие от столицы до Байкала на электричках.</p>
-                <div class="cover__overlay"></div>            
+                <p class="cover__subtitle">По мотивам учебной темы о Транссибе — путешествие от столицы до Байкала на электричках.</p>                         
         </a>
         </section>
     </main>
